# inexor-rgf-core-behaviour

./: Cargo.toml  README.md
src/: lib.rs
src/entity/: entity_behaviour.rs  entity_behaviour_factory.rs  entity_behaviour_registry.rs  mod.rs
src/relation/: mod.rs  relation_behaviour.rs  relation_behaviour_factory.rs  relation_behaviour_registry.rs
src/relation/connectors/: behaviour.rs  mod.rs  types.rs
src/tests/: mod.rs
src/tests/entity/: mod.rs
src/tests/entity/arithmetic_gates/: add_gate_test.rs  div_gate_test.rs  max_gate_test.rs  min_gate_test.rs  mod.rs  mod_gate_test.rs  mul_gate_test.rs  sub_gate_test.rs
src/tests/entity/logical_gates/: and_gate_test.rs  mod.rs  nand_gate_test.rs  nor_gate_test.rs  not_gate_test.rs  or_gate_test.rs  xor_gate_test.rs
src/tests/entity/numeric_gates/: mod.rs
src/tests/entity/simple_closures/: log_info_test.rs  mod.rs  print_value_test.rs
src/tests/relation/: mod.rs
src/tests/relation/connectors/: default_connector_test.rs  mod.rs
src/tests/utils/: create_default_connector.rs  create_relation_instance_with_properties.rs  mod.rs
