cargo-features = ["edition2021"]

[package]
name = "inexor-rgf-core-behaviour"
description = "Inexor - Reactive Graph Flow - Core - Behaviour"
version = "0.2.1"
authors = ["Andreas Schaeffer <hanack@nooblounge.net"]
edition = "2021"
license = "MIT"

[dependencies]
indradb-lib = "1"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.67"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
waiter_di = { version = "1.6.4", features = [ "async" ] }

inexor-rgf-core-model = { git = "https://github.com/aschaeffer/inexor-rgf-core-model.git" }
inexor-rgf-core-reactive = { git = "https://github.com/aschaeffer/inexor-rgf-core-reactive.git" }

[dev-dependencies]
random-string = "1.0"

[lib]
crate-type = ["lib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
